--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,5 @@
-
-
-MONGO_URL=mongodb://localhost:27017/dmgdb
+HOST_NAME=
+MONGO_URL=
 JWT_SECRET_SEED=
 NEXTAUTH_SECRET=
 
@@ -12,11 +11,16 @@ NEXT_PUBLIC_TAX_RATE=0.21
 # Providers:
 GITHUB_ID=
 GITHUB_SECRET=
+GOOGLE_CLIENT_ID= 
+GOOGLE_CLIENT_SECRET=
 
 
 # Paypal
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
-
 PAYPAL_OAUTH_URL=
 PAYPAL_ORDERS_URL=
+
+
+#Cloudinary
+CLOUDINARY_URL= 
