--- a/.env.template
+++ b/.env.template
@@ -1,26 +1,27 @@
 HOST_NAME=
+
+
 MONGO_URL=
 JWT_SECRET_SEED=
 NEXTAUTH_SECRET=
 
-
-# Variables publicas:
+# Variables publicas
 NEXT_PUBLIC_TAX_RATE=0.21
 
 
-# Providers:
+# Providers
 GITHUB_ID=
 GITHUB_SECRET=
-GOOGLE_CLIENT_ID= 
-GOOGLE_CLIENT_SECRET=
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 # Paypal
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
+#sb-eofe026030171@personal.example.com
 PAYPAL_OAUTH_URL=
 PAYPAL_ORDERS_URL=
 
-
-#Cloudinary
-CLOUDINARY_URL= 
+#Coludinary
+CLOUDINARY_URL=
